# Traderbot

./: .gitignore  Abrir_TraderBot.bat  COMANDOS_HYPERLIQUID.md  Dockerfile  README.md  Trader Laucher.bat  config.yaml  docker-compose.yml  download_data.py  pyproject.toml  requirements-ui.txt  requirements.txt  telegram_panel.py  theme.qss
docs/: headless_engine_architecture.md
models/: ppo_btc_h1_s1.vecnormalize.pkl  ppo_btc_h1_s21.vecnormalize.pkl  ppo_btc_h1_s256.vecnormalize.pkl  ppo_btc_h1_s512.vecnormalize.pkl  ppo_btc_h1_s999.vecnormalize.pkl
results/: backtest_20260414_164029_metrics.json  backtest_20260414_164939_metrics.json  backtest_20260414_192844_metrics.json  backtest_20260414_194151_metrics.json  backtest_20260415_202031_comparison.json  backtest_20260415_202031_ensemble_vote_metrics.json  backtest_20260415_202031_ppo_btc_h1_s1_metrics.json  backtest_20260415_202031_ppo_btc_h1_s21_metrics.json  backtest_20260415_202031_ppo_btc_h1_s256_metrics.json  backtest_20260415_202031_ppo_btc_h1_s512_metrics.json  backtest_20260415_202031_ppo_btc_h1_s999_metrics.json  forward_oos_20260415_212824_comparison.json  forward_oos_20260415_212824_ensemble_vote_metrics.json  forward_oos_20260415_212824_ppo_btc_h1_s21_metrics.json  multi_train_summary_20260414_164939.json  multi_train_summary_20260414_194151.json  smoke_hyperliquid_20260415_214539_testnet.json  smoke_hyperliquid_20260415_215245_testnet.json  smoke_hyperliquid_20260415_222024_testnet.json  smoke_hyperliquid_20260416_005905_testnet.json  smoke_hyperliquid_20260416_051510_mainnet.json  (+7 more)
(+64 files in other folders)
