[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traderbot-rl"
version = "0.1.0"
description = "Robo de trading com RL (PPO) integrado a Hyperliquid"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "gymnasium>=0.29.1",
  "stable-baselines3>=2.3.0",
  "torch>=2.2.0",
  "ccxt>=4.4.0",
  "eth_account",
  "git+https://github.com/hyperliquid-dex/hyperliquid-python-sdk.git",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "tenacity>=9.0.0",
  "SQLAlchemy>=2.0.30",
  "psycopg[binary]>=3.1.18"
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.8.0",
  "openai>=1.0.0"
]

[project.scripts]
traderbot-launcher = "traderbot.launcher_entry:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
